--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "type": "git"
   },
   "scripts": {
-    "prepare": "bob build"
+    "prepare": "bob build",
+    "test": "jest --coverage --detectOpenHandles",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "use-force-update": "^1.0.7"
@@ -26,10 +28,17 @@
     "@babel/core": "^7.7.7",
     "@babel/runtime": "^7.7.7",
     "@react-native-community/bob": "^0.7.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jest": "^25.2.3",
     "@types/react": "16.9.0",
+    "@types/testing-library__react-hooks": "^3.2.0",
+    "cuid": "^2.1.8",
+    "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.57.0",
     "react": "16.9.0",
+    "react-test-renderer": "^16.9.0",
     "realm": "3.6.0",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
   },
   "peerDependencies": {
